[package]
name = "zoorp"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = {version = "1.0.219", features = ["derive" ]}
reqwest = { version = "0.12.20", features = ["blocking"] }
tokio = { version = "1.45.1", features = ["full"] }
serde_json = "1.0.140"
